# Internet-of-Things-with-ESP32

./: .gitignore  README.md
ch10/aws_ex/: CMakeLists.txt  platformio.ini  sdkconfig.defaults
ch10/coap_ex/: CMakeLists.txt  platformio.ini
ch10/mqtt_ex/: CMakeLists.txt  platformio.ini
ch10/websocket_ex/: CMakeLists.txt  platformio.ini  sdkconfig  sdkconfig.old
ch11/: README
ch11/alexa_sensor/: CMakeLists.txt  platformio.ini  sdkconfig
ch11/ifttt_ex/: CMakeLists.txt  platformio.ini
ch12/: smart_fan.fzz
ch12/smart_fan/: CMakeLists.txt  platformio.ini
ch2/: bme280_example.fzz  button_led.fzz  dht11_example.fzz  ds18b20_example.fzz  led_dimmer.fzz  relay.fzz  stepper.fzz  tsl2561_example.fzz
ch2/bme280/: CMakeLists.txt  platformio.ini
ch2/bme280_ex/: platformio.ini
ch2/button_led/: platformio.ini
ch2/button_led_ex/: CMakeLists.txt
ch2/dht11_example/: CMakeLists.txt  platformio.ini
ch2/ds18b20_example/: CMakeLists.txt  platformio.ini
ch2/led_dimmer/: CMakeLists.txt  platformio.ini
ch2/my_first_project/: CMakeLists.txt
ch2/pir_relay/: platformio.ini
ch2/pir_relay_ex/: CMakeLists.txt
ch2/rotenc_motor/: CMakeLists.txt
ch2/rotenc_motor_ex/: CMakeLists.txt
ch2/tsl2561_example/: CMakeLists.txt  platformio.ini
ch3/: freertos_queue_ex.fzz  lcd_example.fzz  oled_example.fzz  tft_example.fzz
ch3/camera_example/: platformio.ini  (+2 more)
ch3/dsleep_example/main/: CMakeLists.txt  app_main.c
ch4/: camera_example.fzz  dsleep_example.fzz  esp32cam_programming.fzz  i2s_example.fzz  multisensor.fzz  uart_example.fzz
ch9/: light_sensor.fzz  switch.fzz
(+246 files in other folders)
